# python_machine_learning

./: README.md
src/fuzzy_logic/: anordnung_abnehmer_und_stationen_-_mamdami_4.json  mwe_wrong_numpy_version.py  pyproject.toml
src/genetic_algorithms/: main_00_pygad_examples.py  main_01_which_power_plant.py  pyproject.toml
src/genetic_algorithms/data/: cost_a.csv  cost_b.csv  cost_c.csv
src/neural_networks/: XOR_from_scratch.py  neural_network_or.py  neural_network_real_python_tutorial.py  pyproject.toml
wiki/: links_genetic_algorithms.md
