[project]
name = "genetic-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.19.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pygad>=3.5.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]
